--- a/UilFileUtil/index.html
+++ b/UilFileUtil/index.html
@@ -8,20 +8,109 @@
 
     <script src="designer.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <link href="assets/favicon_dark.png" rel="icon" media="(prefers-color-scheme: light)"/>
+    <link href="assets/favicon_light.png" rel="icon" media="(prefers-color-scheme: dark)"/>
+
     <style>
         body, html {
             width: 100%;
             height: 100%;
+            overflow: hidden;
+            padding: 0;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            background-color: rgb(14, 14, 14);
         }
 
         #image_add:hover {
             background: white;
             background-color: lightgray;
         }
+
+        .outputarea {
+            width: 48.7%;
+            margin: .7%;
+            min-height: 70%;
+            height: calc(100% - 30%);
+            position: absolute;
+            background-color: rgb(100, 100, 100);
+            border: 2px solid rgb(39, 39, 39);
+            border-radius: 10px;
+            color: white;
+        }
+
+        #output {
+            width: 99%;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            height: fit-content;
+            min-height: 100px;
+            background-color: rgb(20, 20, 20);
+            border-radius: 10px;
+        }
+
+        #infopanel {
+            width: 99%;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            height: fit-content;
+            min-height: 30px;
+            color: white;
+            background-color: rgb(20, 20, 20);
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 5px;
+            
+        }
+
+        #infopanel > * {
+            margin: 5px;
+            background-color: rgb(39, 39, 39);
+            border-radius: 3px;
+            position: relative;
+            height: 18px;
+            top: 50%;
+        }
+
+        #infopanel > * > * {
+            position: ab;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        #fpsslider {
+
+        }
+
+        #container {
+            width: 99%;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            height: fit-content;
+            min-height: 30px;
+            color: white;
+            background-color: rgb(20, 20, 20);
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: -15px;
+            margin-top: 5px;
+            height: 720px;
+        }
     </style>
 </head>
 <body onload="onLoad();">
-    <div id="container" style="width: fit-content; height: 680px;">
+    <div id="container">
         <span style="display: inline-block;"><canvas width="800", height="680" style="background-color: black;" id="designcanvas"></canvas></span>
         <span id="content" style="width: 300px; height: 680px; background-color: gray; display: inline-block; left: 810px; overflow-y: scroll; overflow-x: hidden;"></span>
         <span id="properties" style="width: 500px; height: 680px; background-color: gray; display: inline-block; left: 810px; overflow-y: scroll; overflow-x: hidden;">
@@ -29,8 +118,11 @@
             <input id="prop_x" type="number" placeholder="X" style="width: 100px;">
             <input id="prop_y" type="number" placeholder="Y" style="width: 100px;">
             <input id="prop_w" type="number" placeholder="Width" style="width: 100px;">
+            <input id="prop_h" type="number" placeholder="Height" style="width: 100px;">
+            <input id="prop_sx" type="number" placeholder="Scale X" style="width: 100px;">
+            <input id="prop_sy" type="number" placeholder="Scale Y" style="width: 100px;"><br>
             <button id="prop_delete" onclick="deleteSelObj()">Delete</button>
-            <input id="prop_h" type="number" placeholder="Height" style="width: 100px;"><br>
+            <button id="prop_delete" onclick="centerObj()">Center</button>
             <div id="image_prop">
                 <input id="prop_image_tex" type="text" placeholder="Texture">
             </div>
@@ -43,22 +135,30 @@
             <div id="text_prop">
                 <input id="prop_text_text" type="text" placeholder="Text">
                 <input id="prop_text_font" type="text" placeholder="Font">
+                <input id="prop_text_scale" type="number" placeholder="Scale">
             </div>
         </span>
     </div>
     </div>
     <br>
-    <p id="stats">FPS: 0</p>
-    <p>Target FPS: <input type="range" min="30" max="60" value="60" step="1" id="fpstarget"></p>
-    <div style="width: fit-content; height: fit-content; background-color: gray; border: white 2px solid; position: absolute;" id="rightclick_menu">
+    <div id="infopanel">
+        <span id="stats">FPS: 0</span>
+        <span id="fpsslider">Target FPS: <input type="range" min="30" max="60" value="60" step="1" id="fpstarget"></span>
+    </div>
+    <div style="width: fit-content; height: fit-content; background-color: gray; border: white 2px solid; position: absolute; visibility: hidden;" id="rightclick_menu">
         <button style="margin: 3px; width: calc(100% - 6px);" id="image_add" onclick="createImage();">Image</button><br>
         <button style="margin: 3px; width: calc(100% - 6px);" id="image_add" onclick="createTexture();">Texture</button><br>
         <button style="margin: 3px; width: calc(100% - 6px);" id="font_add" onclick="createFont();">Font</button>
         <button style="margin: 3px; width: calc(100% - 6px);" id="font_add" onclick="createText();">Text</button>
     </div>
-    <textarea id="code">
-        WAITING
-    </textarea>
+    <div id="output">
+        <textarea id="code" class="outputarea" readonly>
+WAITING
+        </textarea>
+        <textarea id="errorlist" class="outputarea" style="right: 0px; position: absolute;" readonly>
+ERROR LIST THIS FRAME
+        </textarea>
+    </div>
     <input id="fileselect_hidden", type="file" style="visibility: hidden;">
 </body>
 </html>
